--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,6 @@
-.vscode
-data
-data.*
-__pycache__
-fetch.log
-select_results.log
+# Git相关
+.git
+.gitignore
 
 # Python相关
 __pycache__
@@ -30,9 +27,17 @@ coverage.xml
 # 数据目录（会在容器中创建）
 data/
 logs/
+select_results.log
+fetch.log
+
+# Docker相关
+Dockerfile
+docker-compose.yml
+.dockerignore
 
 # 其他
 .DS_Store
+.vscode
 *.swp
 *.swo
 *~
